# dynamodb-serialise

./: pyproject.toml  setup.cfg
.github/workflows/: publish-python-package.yml  test-python-package.yml
src/: dynamodb_serialise.py
